[package]
name = "genpass"
version = "0.2.0"
edition = "2024"
authors = ["ichi <ichi944g@gmail.com>"]
description = "A lightweight, flexible password generator with zero dependencies for core logic"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Better optimization
strip = true      # Strip symbols for smaller binary
